--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,14 +9,16 @@
     </a>
   </div>
 
-  <div class="flex justify-end w-full">
-    <div class="items-start my-5 mx-5">
+  <div class="flex justify-end w-full sm:mx-5 sm: items-start">
+    <div
+      class="flex flex-col-reverse gap-1 sm:flex-row sm:items-start my-5 mx-5 transition-transform"
+    >
       <button
-        class="text-white bg-asiseg-gray hover:bg-slate-700 p-2 rounded-md mr-1"
+        class="text-white bg-asiseg-gray opacity-65 hover:opacity-100 transition-opacity p-2 rounded-md mx-1 mt-1 sm:mt-0"
         >Registrarse</button
       >
       <button
-        class="text-white bg-asiseg-blue hover:bg-sky-500 p-2 rounded-md ml-1"
+        class="text-white bg-asiseg-blue opacity-65 hover:opacity-100 transition-opacity p-2 rounded-md mx-1"
         >Iniciar sesión</button
       >
       <!-- <img alt="logo" src="user.svg" class="w-14 mx-10 rounded-full border-4" /> -->
