--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,8 +30,9 @@ const { title } = Astro.props
       font-family: 'Inter var', system-ui, sans-serif;
     }
     body {
-      background-color: rgb(248 250 252);
+      /* background-color: rgb(248 250 252); */
     }
   </style>
+
 
 </html>
