--- a/src/Views/components/Filters/filter.css
+++ b/src/Views/components/Filters/filter.css
@@ -22,3 +22,7 @@
 .p-multiselect-panel .p-multiselect-items .p-multiselect-item.p-highlight{
     color: #03989E;
 }
+
+.p-multiselect:not(.p-disabled).p-focus{
+    box-shadow: 0 0 0 1px #03989e;
+}
