--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,9 @@ const { title } = Astro.props
       font-family: 'Inter var', system-ui, sans-serif;
     }
     body {
+      --focus-ring: 0 0 0 1px #03989e;
+      --primary-color: #03989e;
+      --highlight-text-color: #03989e;
       /* background-color: rgb(248 250 252); */
     }
   </style>
