--- a/src/Views/styles/register.css
+++ b/src/Views/styles/register.css
@@ -5,6 +5,9 @@
     background-color: #f8fafc;
 }
 
-.p-inputtext{
-    text-indent: 10px;
+.p-inputtext:enabled:focus{
+    box-shadow: 0 0 0 1px #03989e;
 }
+
+
+
