--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,10 @@ const { title } = Astro.props
       --highlight-text-color: #03989e;
       /* background-color: rgb(248 250 252); */
     }
+    .asiseg_input:focus-visible {
+      box-shadow: 0 0 0 1px #03989e;
+      outline: none;
+    }
   </style>
 
 
