--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import SideFilters from '@components/Filters/SideFilters'
 import InfoCard from '@components/InfoCard.jsx'
 import SearchBar from '@components/SearchBar.jsx'
 import Header from '@components/Header'
@@ -10,19 +9,15 @@ import '../Views/styles/index.css'
 <Layout title="ASISEG">
   <section class="layout antialiased">
     <Header client:visible />
-    <!-- <div class="leftSide md:mx-5 mt-0 xl:mt-20">
-      <SideFilters client:visible />
-    </div> -->
 
-    <div class="search w-full h-full mb-5 mt-20">
+    <div class="search w-full pt-24 flex items-end bg-white fixed z-10 pb-6">
       <SearchBar client:visible />
     </div>
 
-    <main class="body mb-10 mt-0">
+    <main class="body pt-36">
       <section
-        class="grid grid-cols-1 md:grid-cols-2 lg+:grid-cols-3 xl:grid-cols-4 3xl:grid-cols-4 gap-5"
+        class="grid grid-cols-1 sm:grid-cols-2 lg+:grid-cols-3 xl:grid-cols-4 gap-5"
       >
-        <!-- <div vaul-drawer-wrapper=""> -->
         <InfoCard
           client:visible
           titulo="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac dui et mauris tincidunt fermentum. Quisque vestibulum quam id turpis facilisis, in ullamcorper nulla ullamcorper."
@@ -69,10 +64,9 @@ import '../Views/styles/index.css'
           titulo="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac dui et mauris tincidunt fermentum. Quisque vestibulum quam id turpis facilisis, in ullamcorper nulla ullamcorper."
           descripcion="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac dui et mauris tincidunt fermentum. Quisque vestibulum quam id turpis facilisis, in ullamcorper nulla ullamcorper. Nulla facilisi. Sed feugiat augue eget fermentum aliquam. Integer bibendum auctor ex, vel euismod purus. Sed tristique ligula nec ligula blandit, sit amet aliquam elit laoreet."
         />
-        <!-- </div> -->
       </section>
     </main>
-    <!-- </FiltersProvider> -->
-    <footer class="footer"></footer>
+
+    <footer class="footer h-96 bg-slate-300">Footer</footer>
   </section>
 </Layout>
