Manejo de usuario global y estilos en Panel de usuario

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,4 +69,5 @@ import '../Views/styles/index.css'
 
     <footer class="footer h-96 bg-slate-300">Footer</footer>
   </section>
+  <!-- <MenuPanel client:visible /> -->
 </Layout>
