--- a/src/layouts/PanelDeUsuario.astro
+++ b/src/layouts/PanelDeUsuario.astro
@@ -1,12 +1,11 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
 import { PrimeReactProvider } from 'primereact/api'
-
+import UserPanel from '@components/UserPanel'
 interface Props {
   title: string
 }
-
 const { title } = Astro.props
+import { ViewTransitions } from 'astro:transitions'
 ---
 
 <!doctype html>
@@ -23,6 +22,7 @@ const { title } = Astro.props
   </head>
   <PrimeReactProvider>
     <body>
+      <UserPanel client:only />
       <slot />
     </body>
   </PrimeReactProvider>
