--- a/src/pages/administrarcitas.astro
+++ b/src/pages/administrarcitas.astro
@@ -1,5 +1,5 @@
 ---
-import PanelDeUsuario from '../../layouts/PanelDeUsuario.astro'
+import PanelDeUsuario from '../layouts/PanelDeUsuario.astro'
 ---
 
 <PanelDeUsuario title="Panel de usuario">
