Creacion de paginas de administracion de contenido y estandarizacion de algunos componentes

--- a/src/pages/administrarcontenido.astro
+++ b/src/pages/administrarcontenido.astro
@@ -1,9 +1,11 @@
 ---
-import { loadTSConfig } from 'astro/dist/core/config'
 import PanelDeUsuario from '../layouts/PanelDeUsuario.astro'
 import AdminContent from '../Views/components/AdminContent'
+import ProtectedRoute from '../Views/components/ProtectedRoute'
 ---
 
-<PanelDeUsuario title="Panel de usuario">
-  <AdminContent client:load />
-</PanelDeUsuario>
+<ProtectedRoute client:only>
+  <PanelDeUsuario title="Panel de usuario">
+    <AdminContent client:only />
+  </PanelDeUsuario>
+</ProtectedRoute>
