--- a/src/Views/components/quill.css
+++ b/src/Views/components/quill.css
@@ -1,6 +1,6 @@
 .inner img{
-    width: 50%;
+    min-width: 30%;
     display: flex;
-   justify-content: center;
-   
+    justify-content: center;
+    aspect-ratio: 16/9;
 }
